Refactor tests to reduce duplication and update base paths for new service structure